--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Bmi Calculatornt</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Bmi Calculatornt</title>
+<title>Bmi Calculator</title>
 <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-<h1>Bmi Calculator</h1>
+<h1>BMI Calculator</h1>
 <input type="text" placeholder="Your weight in kilograms"  id="weight">
 <input type="text" placeholder="Your height in centimeters" id="height">
 <button onclick="calculateBmi()">Calculate</button>
