--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <h1>BMI Calculator</h1>
 <input type="text" placeholder="Your weight in kilograms"  id="weight">
 <input type="text" placeholder="Your height in centimeters" id="height">
-<button onclick="calculateBmi()">Calculate</button>
+<button onclick="calculateBmi()" id="Calculate">Calculate</button>
 <script src="./assets/javascript/bmiCalculator.js"></script>
 <script src="./assets/javascript/bmiInterface.js"></script>
 <div id="results"></div>
