--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,9 @@
 <h1>BMI Calculator</h1>
 <input type="text" placeholder="Your weight in kilograms"  id="weight">
 <input type="text" placeholder="Your height in centimeters" id="height">
-<button onclick="calculateBmi()">Calculate</button>
+<button onclick="Calculate()">Calculate</button>
 <script src="./assets/javascript/bmiCalculator.js"></script>
-<script src="./assets/javascript/bmiInterface.js"></script>
+<script src="./assets/javascript/bmiUI.js"></script>
 <div id="results"></div>
 </body>
 </html>
