--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,10 @@
 <h1>BMI Calculator</h1>
 <input type="text" placeholder="Your weight in kilograms"  id="weight">
 <input type="text" placeholder="Your height in centimeters" id="height">
-<button onclick="Calculate()">Calculate</button>
+<button onclick="calculateBMI()" id="Calculate">Calculate</button>
 <script src="./assets/javascript/bmiCalculator.js"></script>
 <script src="./assets/javascript/bmiUI.js"></script>
+<link rel="stylesheet" href="./assets/css/style.css">
 <div id="results"></div>
 </body>
 </html>
